--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   pointer-events: none;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
 @media ( prefers-reduced-motion : no-preference ) {
 
   .App-logo {
