--- a/src/components/Categorias/Categorias.css
+++ b/src/components/Categorias/Categorias.css
@@ -1,6 +1,6 @@
 .cat-container {
   align-items: center;
-  border-right: 3px solid #AAA;
+  border-right: 3px solid #aaa;
   display: flex;
   flex-direction: column;
   margin-right: 5px;
@@ -11,13 +11,14 @@
   display: hidden;
   font-size: 1px;
 }
+
 .cat-item {
   background-color: rgb(1, 32, 100);
   border-radius: 10px;
   color: white;
   font-size: 1.3vw;
-  margin: 5px 5px 5px 5px;
-  padding: 5% 5%;
+  margin: 5px;
+  padding: 5%;
   text-align: center;
   width: 95%;
 }
