--- a/src/App.css
+++ b/src/App.css
@@ -17,21 +17,18 @@ body {
   min-width: 15%;
 }
 
-.categories-list ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.categories-list li {
+.categories-list div {
+  align-items: center;
+  display: flex;
+  flex-grow: 1;
   font-size: 18px;
   font-weight: 500;
   height: 30px;
-  padding: 6px 15px 0;
-  text-align: center;
+  justify-content: center;
+  padding: 0 10px;
 }
 
-.categories-list li:hover {
+.categories-list div:hover {
   background-color: #303030;
   color: white;
   transition: all 0.5s;
@@ -125,26 +122,6 @@ main {
     overflow: scroll;
   }
 
-  .categories-list ul {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-  }
-
-  .categories-list li {
-    align-items: center;
-    display: flex;
-    flex-grow: 1;
-    font-size: 16px;
-    font-weight: 400;
-    height: 37px;
-    justify-content: center;
-    line-height: 17px;
-    margin: 0;
-    padding: 0 2px;
-    width: 48%;
-  }
-
   .header {
     height: 100px;
   }
@@ -161,6 +138,8 @@ main {
   }
 
   .search-bar input {
+    font-size: 16px;
+    height: 25px;
     width: 90%;
   }
 
@@ -170,6 +149,7 @@ main {
   }
 
   .search-bar-container p {
+    font-size: 16px;
     margin: 5px 0;
   }
 }
@@ -223,6 +203,8 @@ main {
   }
 
   .search-bar input {
+    font-size: 16px;
+    height: 25px;
     width: 90%;
   }
 
