--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ body {
 }
 
 .header button {
-  background-color: #ffffff;
+  background-color: white;
   border: none;
   border-left: 1px solid rgb(214, 211, 211);
   cursor: pointer;
@@ -43,7 +43,7 @@ body {
   display: flex;
   justify-content: center;
   margin: auto;
-  max-width: 1215px;  
+  max-width: 1215px;
 }
 
 .left-content {
@@ -60,8 +60,8 @@ body {
 
 .categories-list ul {
   list-style-type: none;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 .categories-list ul li {
@@ -79,7 +79,7 @@ body {
 }
 
 .product {
-  background-color: #ffffff;
+  background-color: white;
   border-radius: 6px;
   box-shadow: 0 1px 1px 0 rgb(0 0 0 / 10%);
   display: flex;
