--- a/src/components/categoryList.css
+++ b/src/components/categoryList.css
@@ -2,7 +2,7 @@ ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 0px;
+  padding: 1px;
 }
 
 li {
@@ -11,6 +11,6 @@ li {
   border-radius: 7px;
   color: white;
   list-style-type: none;
-  margin: 5px 5px;
+  margin: 5px;
   padding: 5px;
 }
