--- a/src/components/ProductCard.css
+++ b/src/components/ProductCard.css
@@ -1,22 +1,22 @@
 .card-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid red;
-    height: 250px;
-    width: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 250px;
+  width: 200px;
+  margin: 10px 15px;
 }
-.product-title{
-    font-size: 20px;
-    padding-bottom: 5px;
+.product-title {
+  font-size: 15px;
+  padding-bottom: 5px;
+  text-align: center;
 }
-.product-image{
-    border: 1px solid yellow;
-    height: 150px;
-    width: 150px;
+.product-image {
+  height: 150px;
+  width: 150px;
 }
 .product-price {
-    font-size: 25px;
-    padding-top: 5px;
+  font-size: 25px;
+  padding-top: 5px;
 }
