mais correçoes linter

--- a/src/components/Categories.css
+++ b/src/components/Categories.css
@@ -5,15 +5,17 @@
   margin: 30px auto;
   width: 80%;
 }
+
 .categories-container span {
   background-color: rgb(160, 112, 8);
   border-radius: 30px;
   display: inline-block;
-  margin: 10px 10px;
+  margin: 10px;
   padding: 10px 15px;
 }
+
 .categorie {
-  color: #fff;
+  color:white;
   text-decoration: none;
   text-transform: uppercase;
 }
