--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,16 @@ a {
   color: #61dafb;
 }
 
+.categoryContainer {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+}
+
+.categoryContainer button + button {
+  margin-top: 4px;
+}
+
 @keyframes App-logo-spin {
 
   from {
