--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,184 @@
-.product-card {
+body {
+  border: 0;
+  font-family: 'Poppins' , sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #ebebeb;
+}
+
+button {
+  border: 1px solid #70680f;
+  border-radius: 1px;
+  color: #272727;
+  font-weight: 600;
+  background-color: #ffee31;
+}
+
+button:hover {
+  background-color: #ffec1e;
+  color: #1a1a1a;
+}
+
+button:focus {
+  outline: none;
+}
+
+header {
+  -ms-flex-line-pack: center;
+      align-content: center;
   border: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 30px;
+  background-color: #fff159;
+}
+
+header .header-wrap {
+  border: 1px solid green;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+header .header-wrap .header-left {
+  width: 20%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid blue;
+}
+
+header .header-wrap .header-right {
+  width: 20%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid blue;
+}
+
+.navbar {
+  min-height: 20px;
+  max-height: 60px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #fff159;
+  border-top: 1px solid #2e2e2e;
+  border-bottom: 1px solid #2e2e2e;
+}
+
+.navbar .nav-wrap {
+  margin-top: 2px;
+  margin-bottom: 2px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid red;
+}
+
+.navbar .nav-wrap .nav-categories {
+  border: 1px solid blueviolet;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 2px;
+  font-weight: 300;
+  color: #252525;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+  font-size: 0.9vw;
+}
+
+.navbar .nav-wrap .nav-categories ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: baseline;
+      -ms-flex-pack: baseline;
+          justify-content: baseline;
+  width: 100%;
+  height: 100%;
+}
+
+.navbar .nav-wrap .nav-categories ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0;
+}
+
+.content {
+  background-color: #ebebeb;
+  margin-top: 4px;
+  border: 1px solid red;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 80%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.productlist {
+  margin-top: 4px;
+  border: 1px solid green;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+.product-card {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -7,11 +186,96 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 400px;
-  width: 400px;
+  height: 280px;
+  width: 220px;
+  background-color: #ffffff;
+  margin-bottom: 8px;
+  margin-left: 4px;
+  margin-right: 4px;
 }
 
 .product-card .product-card-image {
   width: 100%;
+  height: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+.product-card .product-card-image img {
+  width: 100%;
+  max-height: 100%;
+}
+
+.product-card .product-card-info {
+  height: 30%;
+  width: 94%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 1em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.product-card .product-card-info .product-card-info-price {
+  color: #272727;
+  font-size: 1.3em;
+  margin-left: 6px;
+}
+
+.product-card .product-card-info .product-card-info-price .price-part-1 {
+  color: black;
+  font-size: 1.1em;
+  font-weight: 300;
+}
+
+.product-card .product-card-info .product-card-info-price .price-part-2 {
+  color: #272727;
+  margin-left: 2px;
+  font-size: 1.1em;
+}
+
+.product-card .product-card-info .product-card-info-price .price-part-3 {
+  color: #4b4b4b;
+  margin-left: 2px;
+  position: relative;
+  top: -5px;
+  font-size: 0.8em;
+  font-weight: 300;
+}
+
+.product-card .product-card-info .product-card-info-title {
+  color: #979fa7;
+  font-size: 1vw;
+  margin-top: 2px;
+  margin-left: 6px;
+}
+
+.product-card .product-card-buy {
+  height: 10%;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.product-card .product-card-buy .product-card-buy-button {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 100%;
+  height: 100%;
 }
 /*# sourceMappingURL=App.css.map */
