--- a/src/App.scss
+++ b/src/App.scss
@@ -1,22 +1,231 @@
-// main {
+$primary-bg-color: #fff159;
+$secundary-bg-color: #ebebeb;
 
-// }
 
-// header {
+//
+$card-bg-color:#ffffff;
 
-// }
+$card-primary-color:#272727;
+$card-primary-alt-color:#4b4b4b;
+$card-secundary-color: #979fa7;
 
-// .content {
+$nav-text-color:#252525;
 
-// }
-.product-card {
+//
+$card-green-color: #39b54a;
+
+// ------------------------------------------------------------
+
+body {
+  border: 0;
+  font-family: 'Poppins' , sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: $secundary-bg-color;
+}
+
+// ------------------------------------------------------------
+
+button {
+  border: 1px solid #70680f;
+  border-radius: 1px;
+  color: $card-primary-color;
+  font-weight: 600;
+  background-color: #ffee31;
+  &:hover {
+    background-color: #ffec1e;
+    color: rgb(26, 26, 26);
+  }
+  &:focus {
+    outline: none;
+  }
+}
+
+// ------------------------------------------------------------
+
+header {
+  align-content: center;
   border: 1px solid black;
   display: flex;
+  height: 30px;
+  background-color: $primary-bg-color;
+  .header-wrap {
+    border: 1px solid green;
+    display: flex;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-between;
+    .header-left {
+      width: 20%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      border: 1px solid blue;
+    }
+
+    .header-right {
+      width: 20%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      border: 1px solid blue;
+    }
+  }
+}
+// ------------------------------------------------------------
+.navbar {  
+  min-height: 20px;
+  max-height: 60px;
+  width: 100%;
+  display: flex;
+  background-color: $primary-bg-color;
+  border-top: 1px solid rgb(46, 46, 46);
+  border-bottom: 1px solid rgb(46, 46, 46);
+
+  .nav-wrap {
+    margin-top: 2px;
+    margin-bottom: 2px;
+    display: flex;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    border: 1px solid red;
+
+
+    .nav-categories {
+      border: 1px solid blueviolet;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 2px;
+      font-weight: 300;
+      color:$nav-text-color;
+      
+      display: flex;
+      justify-content:center;
+      height: 100%;
+      font-size: 0.9vw;
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content:baseline;    
+        width: 100%; 
+        height: 100%;
+        
+        li {
+          display:flex;
+          justify-content: center;
+          padding: 0;
+        }
+      }
+    }
+  }
+}
+
+// ------------------------------------------------------------
+
+
+.content {
+  background-color: $secundary-bg-color;
+  margin-top: 4px;
+  border: 1px solid red;
+  display: flex;
+  width: 80%;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.productlist {
+  margin-top: 4px;
+  border: 1px solid green;
+  display: flex;
+  width: 100%;
+  justify-content:center;
+  flex-wrap: wrap;
+  align-items: stretch;
+}
+
+.product-card {
+  // border: 1px solid black;
+  display: flex;
   flex-direction: column;
-  height: 400px;
-  width: 400px;
+  height: 280px;
+  width: 220px;
+  background-color: $card-bg-color;
+  margin-bottom: 8px;
+  margin-left: 4px;
+  margin-right: 4px;
 
   .product-card-image {
     width: 100%;
+    height: 60%;
+    display: flex;
+    align-content: center;
+    img {
+      width: 100%;
+      max-height: 100%;
+    } 
+  }
+
+  .product-card-info {
+    height: 30%;
+    width: 94%;
+    display: flex;
+    flex-direction: column;
+    font-size: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    
+
+    .product-card-info-price {
+      color: $card-primary-color;
+      font-size: 1.3em;
+      margin-left: 6px;
+      .price-part-1 {
+        color: black;
+        font-size: 1.1em;
+        font-weight: 300;
+      }
+      .price-part-2 {
+        color: $card-primary-color;
+        margin-left: 2px;
+        font-size: 1.1em;
+      }
+      .price-part-3 {
+        color: $card-primary-alt-color;
+        margin-left: 2px;
+        position: relative;
+        top: -5px;
+        font-size: 0.8em;
+        font-weight: 300;
+      }
+    }
+    .product-card-info-title {
+      color: $card-secundary-color;
+      font-size: 1vw;
+      margin-top: 2px;
+      margin-left: 6px;
+   }
+  }
+
+  .product-card-buy {
+    height: 10%;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+    .product-card-buy-button {
+      align-self: center;
+      width: 100%;
+      height: 100%;
+    }
   }
 }
