--- a/src/App.scss
+++ b/src/App.scss
@@ -58,12 +58,14 @@ header {
   align-content: center;
   // border: 1px solid black;
   display: flex;
-  height: 26px;
+  height: 38px;
   background-color: $primary-bg-color;
+  padding-top: 6px;
+  padding-bottom: 6px;
   .header-wrap {
     // border: 1px solid green;
     display: flex;
-    width: 60%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
     justify-content: space-between;
@@ -71,27 +73,52 @@ header {
       width: 20%;
       height: 100%;
       display: flex;
-      justify-content: flex-start;
+      justify-content: flex-start;  
+      align-items: center;  
       // border: 1px solid blue;
+      .shopping-logo {
+        width: auto;
+        height: 80px;
+        position: relative;
+        margin-left: 12px;
+      }
     }
 
     .header-right {
       width: 20%;
       height: 100%;
       display: flex;
-      justify-content: flex-end;
+      justify-content: flex-end;  
+      align-items: center;   
       // border: 1px solid blue;
+      .checkout-image {
+        width: 24px;
+        height: 24px;
+      } 
+      .checkout-count {
+        display: block;
+        position: relative;
+        top: -6px;
+        margin-left: 4px;
+        margin-right: 4px;
+        color: rgb(105, 105, 105);
+        font-size: 0.9em;
+      }
     }
   }
 }
+
+
 // ------------------------------------------------------------
 .navbar {
+  padding-top: 8px;
+  padding-bottom: 4px;
   min-height: 20px;
   max-height: 60px;
   width: 100%;
   display: flex;
   background-color: $primary-bg-color;
-  border-top: 1px solid rgba(0, 0, 0, 0.082);
+  border-top: 1px solid rgba(56, 56, 56, 0.068);
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 
   .nav-categories {
