--- a/src/App.scss
+++ b/src/App.scss
@@ -270,20 +270,23 @@ header {
       margin-left: 6px;
       .price-part-1 {
         color: black;
-        font-size: 1.1em;
+        font-size: 1.4vw;
+        // font-size: 1.1em;
         font-weight: 300;
       }
       .price-part-2 {
         color: $card-primary-color;
         margin-left: 2px;
-        font-size: 1.1em;
+        // font-size: 1.1em;
+        font-size: 2vw;
       }
       .price-part-3 {
         color: $card-primary-alt-color;
         margin-left: 2px;
         position: relative;
-        top: -5px;
-        font-size: 0.8em;
+        top: -9px;
+        // font-size: 0.8em;
+        font-size: 1vw;
         font-weight: 300;
       }
     }
