--- a/src/App.scss
+++ b/src/App.scss
@@ -45,6 +45,17 @@ input {
   }
 }
 
+.loading {
+  font-size: 1.5em;
+  color:black;
+  font-weight: 600;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+}
+
 // ------------------------------------------------------------
 
 header {
@@ -232,7 +243,7 @@ header {
   // border: 1px solid black;
   display: flex;
   flex-direction: column;
-  height: 280px;
+  height: 320px;
   width: 220px;
   background-color: $card-bg-color;
   margin-bottom: 8px;
@@ -287,7 +298,7 @@ header {
     }
     .product-card-info-title {
       color: $card-secundary-color;
-      font-size: 1vw;
+      font-size: 0.8vw;
       margin-top: 2px;
       margin-left: 6px;
     }
