--- a/src/App.scss
+++ b/src/App.scss
@@ -311,7 +311,7 @@ header {
     margin-right: auto;
     display: flex;
     justify-content: center;
-    .product-card-buy-button {
+    .buy-button {
       align-self: center;
       width: 100%;
       height: 100%;
