--- a/src/App.css
+++ b/src/App.css
@@ -192,20 +192,20 @@ header .header-wrap .header-right .checkout-count {
   margin-right: 4px;
 }
 
-.navbar .nav-categories ul li a {
+.navbar .nav-categories ul li .nav-link {
   text-decoration: none;
+  background-color: #fff159;
+  border: 0;
+  font-size: 1vw;
   color: #4b4b4b;
   font-weight: 300;
 }
 
-.navbar .nav-categories ul li a:hover {
-  color: rgba(0, 0, 0, 0.822);
+.navbar .nav-categories ul li .nav-link:hover {
+  color: rgba(0, 0, 0, 0.87);
   cursor: pointer;
-  font-weight: 400;
-}
-
-.navbar .nav-categories ul li a:visited {
-  color: #4b4b4b;
+  font-weight: 600;
+  font-size: 0.9vw;
 }
 
 .content {
@@ -214,7 +214,7 @@ header .header-wrap .header-right .checkout-count {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 80%;
+  width: 90%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -233,7 +233,7 @@ header .header-wrap .header-right .checkout-count {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 2px;
+  padding: 6px;
   margin-top: 2px;
   margin-bottom: 2px;
   -webkit-box-pack: center;
@@ -350,7 +350,7 @@ header .header-wrap .header-right .checkout-count {
 
 .product-card .product-card-info .product-card-info-title {
   color: #979fa7;
-  font-size: 1vw;
+  font-size: 0.8vw;
   margin-top: 2px;
   margin-left: 6px;
 }
