--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,22 @@ input:focus {
           justify-content: center;
 }
 
+.not-found {
+  font-size: 1.2em;
+  color: #da2525;
+  color: black;
+  font-weight: 600;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 header {
   -ms-flex-line-pack: center;
       align-content: center;
@@ -293,7 +309,15 @@ header .header-wrap .cart-button .cart-count {
           align-items: stretch;
 }
 
-.product-card {
+.product-card-wraper {
+  border: 0;
+  margin-left: 4px;
+  margin-right: 4px;
+  margin-bottom: 8px;
+  background-color: #ffffff;
+}
+
+.product-card-wraper .product-card {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -301,15 +325,12 @@ header .header-wrap .cart-button .cart-count {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 320px;
+  height: 300px;
   width: 220px;
   background-color: #ffffff;
-  margin-bottom: 8px;
-  margin-left: 4px;
-  margin-right: 4px;
 }
 
-.product-card .product-card-image {
+.product-card-wraper .product-card .product-card-image {
   width: 100%;
   height: 60%;
   display: -webkit-box;
@@ -319,12 +340,12 @@ header .header-wrap .cart-button .cart-count {
       align-content: center;
 }
 
-.product-card .product-card-image img {
+.product-card-wraper .product-card .product-card-image img {
   width: 100%;
   max-height: 100%;
 }
 
-.product-card .product-card-info {
+.product-card-wraper .product-card .product-card-info {
   height: 30%;
   width: 94%;
   display: -webkit-box;
@@ -337,27 +358,34 @@ header .header-wrap .cart-button .cart-count {
   font-size: 1em;
   margin-left: auto;
   margin-right: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 14px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.product-card .product-card-info .product-card-info-price {
+.product-card-wraper .product-card .product-card-info .product-card-info-price {
   color: #272727;
   font-size: 1.3em;
   margin-left: 6px;
 }
 
-.product-card .product-card-info .product-card-info-price .price-part-1 {
+.product-card-wraper .product-card .product-card-info .product-card-info-price .price-part-1 {
   color: black;
   font-size: 1.4vw;
   font-weight: 300;
 }
 
-.product-card .product-card-info .product-card-info-price .price-part-2 {
+.product-card-wraper .product-card .product-card-info .product-card-info-price .price-part-2 {
   color: #272727;
   margin-left: 2px;
   font-size: 2vw;
 }
 
-.product-card .product-card-info .product-card-info-price .price-part-3 {
+.product-card-wraper .product-card .product-card-info .product-card-info-price .price-part-3 {
   color: #4b4b4b;
   margin-left: 2px;
   position: relative;
@@ -366,16 +394,16 @@ header .header-wrap .cart-button .cart-count {
   font-weight: 300;
 }
 
-.product-card .product-card-info .product-card-info-title {
+.product-card-wraper .product-card .product-card-info .product-card-info-title {
   color: #979fa7;
-  font-size: 0.8vw;
-  margin-top: 2px;
-  margin-left: 6px;
+  font-size: 1vw;
+  margin-top: 8px;
 }
 
-.product-card .product-card-buy {
-  height: 10%;
+.product-card-wraper .product-buy {
+  height: 30px;
   width: 100%;
+  border: 0;
   margin-left: auto;
   margin-right: auto;
   display: -webkit-box;
@@ -386,24 +414,19 @@ header .header-wrap .cart-button .cart-count {
           justify-content: center;
 }
 
-.product-card .product-card-buy .buy-button {
+.product-card-wraper .product-buy .product-buy-button {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
   width: 100%;
   height: 100%;
-  border: 1px solid rgba(149, 149, 149, 0.692);
   color: #272727;
   font-weight: 600;
   background-color: #ffee31;
 }
 
-.product-card .product-card-buy .buy-button:hover {
-  background-color: #ffec1e;
+.product-card-wraper .product-buy .product-buy-button:hover {
+  background-color: #ffea00;
   color: #1a1a1a;
-}
-
-.product-card .product-card-buy .buy-button:focus {
-  outline: none;
 }
 /*# sourceMappingURL=App.css.map */
