--- a/src/App.scss
+++ b/src/App.scss
@@ -26,7 +26,7 @@ body {
 // ------------------------------------------------------------
 
 button {
-  color: $card-primary-color;  
+  color: $card-primary-color;
   &:focus {
     outline: none;
   }
@@ -35,7 +35,7 @@ button {
 input {
   border: 1px solid rgba(149, 149, 149, 0.692);
   color: $card-primary-alt-color;
-  background-color:white;
+  background-color: white;
   &:hover {
     border: 1px solid rgb(149, 149, 149);
   }
@@ -47,7 +47,19 @@ input {
 
 .loading {
   font-size: 1.5em;
-  color:black;
+  color: black;
+  font-weight: 600;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.not-found {
+  font-size: 1.2em;
+  color: rgb(218, 37, 37);
+  color: black;
   font-weight: 600;
   width: 60%;
   margin-left: auto;
@@ -78,8 +90,8 @@ header {
       width: auto;
       height: 100%;
       display: flex;
-      justify-content: flex-start;  
-      align-items: center;  
+      justify-content: flex-start;
+      align-items: center;
       // border: 1px solid blue;
       .shopping-logo {
         width: auto;
@@ -97,7 +109,7 @@ header {
         &:hover {
           cursor: pointer;
         }
-        .button-back-image  {
+        .button-back-image {
           width: 30px;
           height: 30px;
         }
@@ -109,20 +121,20 @@ header {
       height: 100%;
       display: flex;
       border: 0;
-      justify-content: flex-end;  
-      align-items: center;   
-      background-color:$primary-bg-color;
+      justify-content: flex-end;
+      align-items: center;
+      background-color: $primary-bg-color;
       &:hover {
         cursor: pointer;
       }
       //  border: 1px solid blue;
-       padding-left: 12px;
-       padding-right: 4px;
+      padding-left: 12px;
+      padding-right: 4px;
       .cart-image {
         width: 26px;
         height: 26px;
         display: block;
-      } 
+      }
       .cart-count {
         display: block;
         position: relative;
@@ -136,7 +148,6 @@ header {
     }
   }
 }
-
 
 // ------------------------------------------------------------
 .navbar {
@@ -186,8 +197,8 @@ header {
           border: 0;
           font-size: 1vw;
           color: $card-primary-alt-color;
-          font-weight: 300;          
-        
+          font-weight: 300;
+
           &:hover {
             color: rgba(0, 0, 0, 0.87);
             cursor: pointer;
@@ -198,10 +209,7 @@ header {
       }
     }
   }
-
 }
-
-
 
 // ------------------------------------------------------------
 
@@ -238,7 +246,7 @@ header {
     padding-top: 2px;
     padding-bottom: 2px;
     border-radius: 18px;
-    background-color:#ffffff;
+    background-color: #ffffff;
     &:focus {
       color: rgb(56, 56, 56);
     }
@@ -255,93 +263,125 @@ header {
   align-items: stretch;
 }
 
-.product-card {
-  // border: 1px solid black;
-  display: flex;
-  flex-direction: column;
-  height: 320px;
-  width: 220px;
-  background-color: $card-bg-color;
-  margin-bottom: 8px;
+.product-card-wraper {
+  // border: 1px solid green;
+  border: 0;
   margin-left: 4px;
   margin-right: 4px;
+  margin-bottom: 8px;
+  background-color: $card-bg-color;
 
-  .product-card-image {
-    width: 100%;
-    height: 60%;
-    display: flex;
-    align-content: center;
-    img {
-      width: 100%;
-      max-height: 100%;
-    }
-  }
-
-  .product-card-info {
-    height: 30%;
-    width: 94%;
+  .product-card {
+    // border: 1px solid black;
     display: flex;
     flex-direction: column;
-    font-size: 1em;
-    margin-left: auto;
-    margin-right: auto;
+    height: 300px;
+    width: 220px;
+    background-color: $card-bg-color;
 
-    .product-card-info-price {
-      color: $card-primary-color;
-      font-size: 1.3em;
-      margin-left: 6px;
-      .price-part-1 {
-        color: black;
-        font-size: 1.4vw;
-        // font-size: 1.1em;
-        font-weight: 300;
+    .product-card-image {
+      width: 100%;
+      height: 60%;
+      display: flex;
+      align-content: center;
+      img {
+        width: 100%;
+        max-height: 100%;
       }
-      .price-part-2 {
+    }
+
+    .product-card-info {
+      height: 30%;
+      width: 94%;
+      display: flex;
+      flex-direction: column;
+      font-size: 1em;
+      margin-left: auto;
+      margin-right: auto;
+      align-items: center;
+      margin-top: 14px;
+      justify-content: center;
+
+      .product-card-info-price {
         color: $card-primary-color;
-        margin-left: 2px;
-        // font-size: 1.1em;
-        font-size: 2vw;
+        font-size: 1.3em;
+        margin-left: 6px;
+        .price-part-1 {
+          color: black;
+          font-size: 1.4vw;
+          // font-size: 1.1em;
+          font-weight: 300;
+        }
+        .price-part-2 {
+          color: $card-primary-color;
+          margin-left: 2px;
+          // font-size: 1.1em;
+          font-size: 2vw;
+        }
+        .price-part-3 {
+          color: $card-primary-alt-color;
+          margin-left: 2px;
+          position: relative;
+          top: -9px;
+          // font-size: 0.8em;
+          font-size: 1vw;
+          font-weight: 300;
+        }
       }
-      .price-part-3 {
-        color: $card-primary-alt-color;
-        margin-left: 2px;
-        position: relative;
-        top: -9px;
-        // font-size: 0.8em;
+      .product-card-info-title {
+        color: $card-secundary-color;
         font-size: 1vw;
-        font-weight: 300;
+        margin-top: 8px;
       }
     }
-    .product-card-info-title {
-      color: $card-secundary-color;
-      font-size: 0.8vw;
-      margin-top: 2px;
-      margin-left: 6px;
-    }
+ 
   }
 
-  .product-card-buy {
-    height: 10%;
+  .product-buy {
+    height: 30px;
     width: 100%;
+    border: 0;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     justify-content: center;
-    .buy-button {
+    .product-buy-button {
       align-self: center;
       width: 100%;
       height: 100%;
-      border: 1px solid rgba(149, 149, 149, 0.692);
       color: $card-primary-color;
       font-weight: 600;
       background-color: #ffee31;
       &:hover {
-        background-color: #ffec1e;
+        background-color: #ffea00;
         color: rgb(26, 26, 26);
-      }
-      &:focus {
-        outline: none;
       }
     }
   }
 }
+
+// .product-buy {
+//   height: 30px;
+//   width: 200px;
+//   margin-left: auto;
+//   margin-right: auto;
+//   display: flex;
+//   justify-content: center;
+//   .product-buy-button {
+//     align-self: center;
+//     width: 100%;
+//     height: 100%;
+//     border: 1px solid rgba(149, 149, 149, 0.692);
+//     color: $card-primary-color;
+//     font-weight: 600;
+//     background-color: #ffee31;
+//     &:hover {
+//       background-color: #ffea00;
+//       color: rgb(26, 26, 26);
+//       border: 1px solid rgba(58, 58, 58, 0.692);
+//     }
+//     &:focus {
+//       outline: none;
+//     }
+//   }
+// }
