--- a/src/App.css
+++ b/src/App.css
@@ -310,7 +310,7 @@ header .header-wrap .cart-button .cart-count {
 }
 
 .product-card-wraper {
-  border: 0;
+  border: 1px solid rgba(0, 0, 0, 0.137);
   margin-left: 4px;
   margin-right: 4px;
   margin-bottom: 8px;
@@ -318,6 +318,7 @@ header .header-wrap .cart-button .cart-count {
 }
 
 .product-card-wraper .product-card {
+  border: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -325,7 +326,7 @@ header .header-wrap .cart-button .cart-count {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 300px;
+  height: 260px;
   width: 220px;
   background-color: #ffffff;
 }
@@ -396,14 +397,14 @@ header .header-wrap .cart-button .cart-count {
 
 .product-card-wraper .product-card .product-card-info .product-card-info-title {
   color: #979fa7;
-  font-size: 1vw;
-  margin-top: 8px;
+  font-size: 0.9vw;
+  margin-top: 12px;
 }
 
 .product-card-wraper .product-buy {
+  border-top: 1px solid rgba(0, 0, 0, 0.137);
   height: 30px;
   width: 100%;
-  border: 0;
   margin-left: auto;
   margin-right: auto;
   display: -webkit-box;
@@ -415,6 +416,7 @@ header .header-wrap .cart-button .cart-count {
 }
 
 .product-card-wraper .product-buy .product-buy-button {
+  border: 0;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -428,5 +430,40 @@ header .header-wrap .cart-button .cart-count {
 .product-card-wraper .product-buy .product-buy-button:hover {
   background-color: #ffea00;
   color: #1a1a1a;
+}
+
+.product-add-cart {
+  height: 30px;
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.product-add-cart .product-buy-button {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgba(149, 149, 149, 0.692);
+  color: #272727;
+  font-weight: 600;
+  background-color: #ffee31;
+}
+
+.product-add-cart .product-buy-button:hover {
+  background-color: #ffea00;
+  color: #1a1a1a;
+  border: 1px solid rgba(58, 58, 58, 0.692);
+}
+
+.product-add-cart .product-buy-button:focus {
+  outline: none;
 }
 /*# sourceMappingURL=App.css.map */
