--- a/src/App.scss
+++ b/src/App.scss
@@ -270,6 +270,17 @@ header {
   margin-right: 4px;
   margin-bottom: 8px;
   background-color: $card-bg-color;
+  height: 291px;
+  border: 1px solid rgba(0, 0, 0, 0.205);   
+  box-shadow: 1px 1px 1px  rgba(0, 0, 0, 0.075);  
+
+  &:hover {
+    border: 1px solid rgba(0, 0, 0, 0.274);     
+    cursor: pointer;
+    position: relative;
+    top: -1px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.212);
+  }
 
   .product-card {
     // border: 1px solid black;
@@ -353,10 +364,13 @@ header {
       height: 100%;
       color: $card-primary-color;
       font-weight: 600;
-      background-color: #ffee31;
+      background-color: #ffea00e1;
       &:hover {
         background-color: #ffea00;
-        color: rgb(26, 26, 26);
+        color: rgb(14, 14, 14);
+        font-weight: 600;
+        text-shadow: 2px black;
+        cursor: pointer;
       }
     }
   }
