--- a/src/App.css
+++ b/src/App.css
@@ -411,7 +411,11 @@ header .header-wrap .cart-button .cart-count {
 .product-card-wraper .product-card .product-card-info .product-card-info-title {
   color: #979fa7;
   font-size: 0.9vw;
-  margin-top: 12px;
+  -webkit-text-size-adjust: auto;
+     -moz-text-size-adjust: auto;
+      -ms-text-size-adjust: auto;
+          text-size-adjust: auto;
+  margin-top: 2px;
 }
 
 .product-card-wraper .product-buy {
