--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,19 @@ body {
 }
 
 .left-content {
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
   min-width: 200px;
+}
+
+.categorie-button:not( :hover ) {
+  transition: transform 0.5s;
+}
+
+.categorie-button:hover {
+  transform: scale(1.1);
+  transition: transform 0.5s;
 }
 
 .right-content {
@@ -57,17 +69,12 @@ body {
 .categories-list {
   display: flex;
   flex-direction: column;
-  margin-right: 5px;
+  width: 200px;
 }
 
-.categories-list ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.categories-list ul li {
-  margin-top: 2px;
+.categories-list button {
+  cursor: pointer;
+  text-align: justify;
 }
 
 .s-bar {
@@ -80,15 +87,31 @@ body {
   flex-wrap: wrap;
 }
 
-.product {
+.product:not( :hover ) {
   background-color: white;
-  border-radius: 6px;
+  border-radius: 20px;
   box-shadow: 0 1px 1px 0 rgb(0 0 0 / 10%);
   display: flex;
   flex-direction: column;
   font-size: 11px;
   margin-bottom: 5px;
   margin-left: 5px;
+  transition: transform 1s;
+  width: 32%;
+}
+
+.product:hover {
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 0 1px 1px 0 rgb(0 0 0 / 10%);
+  display: flex;
+  flex-direction: column;
+  font-size: 11px;
+  height: 398.08;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  transform: scale(1.1);
+  transition: transform 1s;
   width: 32%;
 }
 
