--- a/src/App.scss
+++ b/src/App.scss
@@ -203,7 +203,7 @@ header {
     }
   }
 
-  .nav-categories {
+  .categories-list {
     padding-top: 8px;
     // border: 1px solid red;
     min-height: 20px;
