--- a/src/App.css
+++ b/src/App.css
@@ -226,7 +226,7 @@ header .header-wrap .cart-button .cart-count {
   color: #383838;
 }
 
-.product-search .nav-categories {
+.product-search .categories-list {
   padding-top: 8px;
   min-height: 20px;
   max-height: 60px;
@@ -248,7 +248,7 @@ header .header-wrap .cart-button .cart-count {
   font-size: 0.9vw;
 }
 
-.product-search .nav-categories ul {
+.product-search .categories-list ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -263,7 +263,7 @@ header .header-wrap .cart-button .cart-count {
   padding: 2px;
 }
 
-.product-search .nav-categories ul li {
+.product-search .categories-list ul li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -275,7 +275,7 @@ header .header-wrap .cart-button .cart-count {
   margin-right: 4px;
 }
 
-.product-search .nav-categories ul li .nav-link {
+.product-search .categories-list ul li .nav-link {
   text-decoration: none;
   background-color: #ebebeb;
   border: 0;
@@ -284,7 +284,7 @@ header .header-wrap .cart-button .cart-count {
   font-weight: 300;
 }
 
-.product-search .nav-categories ul li .nav-link:hover {
+.product-search .categories-list ul li .nav-link:hover {
   color: rgba(0, 0, 0, 0.87);
   cursor: pointer;
   font-weight: 600;
