--- a/src/App.css
+++ b/src/App.css
@@ -96,23 +96,32 @@ body {
   font-size: 11px;
   margin-bottom: 5px;
   margin-left: 5px;
+  overflow: hidden;
   transition: transform 1s;
   width: 32%;
 }
 
 .product:hover {
   background-color: white;
+  border: 1px solid gray;
   border-radius: 20px;
-  box-shadow: 0 1px 1px 0 rgb(0 0 0 / 10%);
+  box-shadow: 0 0 11px rgba(15, 15, 15, 0.2);
   display: flex;
   flex-direction: column;
   font-size: 11px;
   height: 398.08;
   margin-bottom: 5px;
   margin-left: 5px;
-  transform: scale(1.1);
+  overflow: hidden;
+  transform: scale(1.05);
   transition: transform 1s;
   width: 32%;
+  z-index: 1;
+}
+
+.product img {
+  height: 240px;
+  width: 240px;
 }
 
 .product-info-wraper {
