--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -6,8 +6,7 @@ body {
   align-items: center;
   border: 1px solid black;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   justify-content: space-around;
   margin: auto;
   padding: 10px;
